@@ -1,5 +1,8 @@
 2015-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/pict.c (ReadPICTImage): Fix PICT reader crash when
+	reading corrupted file.
+
 	* coders/sun.c (ReadSUNImage): Sun reader was still not as robust
 	as it should be.  Now it is.
 
